  2. qmap's arguments properly handled.
  3. OSM_scale_lookup used for better scale choices with OpenStreetMaps.






Version 1.1
-------------------------------------------------------------------------
Changes -
  ggimage and ggmapplot are now properly based on annotation_raster.  the custom geom_raster (and related dependence) has been removed.  dependence on proto removed.

Additions -
  1. theme_inset which allows for easy inset theming (exported)
  2. ggmap now takes latitude longitude ranges for OpenStreetMaps 

Fixes -
  1. qmap now properly sets the fullpage(=TRUE) argument when unspecified.
  2. ggmap now properly provides a black and white image when specified.




Version 1.0
-------------------------------------------------------------------------
ggimage and ggmapplot are now based on geom_raster (new in ggplot2 as of version 0.9.0).




Version 0.8
-------------------------------------------------------------------------
Changes - 
1. Further updated examples for a more efficient R CMD check.
2. ggmap now calls geocode (see below) for geocoding.
3. packages now load quietly.
4. grid now imported.
5. ggmap updated to ggplot2 version 0.9.0 which involved changes :
	1. legend = FALSE changed to guide = 'none' in ggimage, ggmapplot
	2. in ggimage examples, aesthetic "colour" changed to "colours"
	3. in ggmapplot examples, argument "to" in scale_size changed to "range"
6. .Internal calls in ggimage and ggmap for color conversion changed to simple rgb calls.

Additions - 
1. The geocoding subroutine of ggmap has been converted to its own function called geocode, which is exported.

Version 0.7
-------------------------------------------------------------------------
Changes - Examples not run at R CMD check.

Version 0.6
-------------------------------------------------------------------------
Changes - ggimage and ggmap now properly reshape using the reshape2 package.

Version 0.5
-------------------------------------------------------------------------